cambié el proyecto de "One Page" a "Multi Page"

--- a/index.html
+++ b/index.html
@@ -4,158 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Museo de Arte Moderno Lima</title>
-
+    <title>Museo de Arte Moderno Lima - Inicio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
     <header class="header-principal">
         <div class="contenedor nav-contenedor">
-            <a class="logo">Museo de Arte Moderno</a>
-
+            <a href="index.html" class="logo">Museo de Arte Moderno</a>
             <nav class="nav-principal">
-                <a href="#inicio" class="activo">Inicio</a>
-                <a href="#exposiciones">Exposiciones</a>
-                <a href="#artistas">Artistas</a>
-                <a href="#tickets">Tickets</a>
-                <a href="#contacto">Contacto</a>
+                <a href="index.html" class="activo">Inicio</a>
+                <a href="exposiciones.html">Exposiciones</a>
+                <a href="artistas.html">Artistas</a>
+                <a href="tickets.html">Tickets</a>
+                <a href="contacto.html">Contacto</a>
             </nav>
         </div>
     </header>
 
     <main>
-
-        <section class="hero-inicio" id="inicio">
+        <section class="hero-inicio">
             <div class="hero-contenido">
                 <h1 class="hero-titulo">El Arte Define Nuestro Presente</h1>
                 <p class="hero-subtitulo">Descubre las nuevas colecciones y talleres del MAML.</p>
-                <a href="#tickets" class="btn-ticket">Comprar Tickets</a>
+                <a href="tickets.html" class="btn-ticket">Comprar Tickets</a>
             </div>
         </section>
-
-        <section class="seccion-layout contenedor" id="exposiciones">
-            <h2>Agenda Cultural y Exposiciones</h2>
-            <p class="seccion-descripcion">Eventos y talleres diseñados para artistas, estudiantes y turistas.</p>
-
-            <div class="galeria-grid">
-
-                <article class="galeria-tarjeta">
-                    <img src="img/imagen1.jpg" alt="Instalación de arte contemporáneo">
-                    <div class="tarjeta-info">
-                        <h3>Taller: El Lienzo Digital</h3>
-                        <p>Únete a nuestro taller de arte. Dirigido a estudiantes y artistas.</p>
-                        <a href="#contacto" class="enlace-tarjeta">Registrarse ahora</a>
-                    </div>
-                </article>
-
-                <article class="galeria-tarjeta">
-                    <img src="img/imagen2.jpg" alt="Pintura abstracta en exhibición">
-                    <div class="tarjeta-info">
-                        <h3>Expo: "Sombras de la Ciudad"</h3>
-                        <p>Una mirada introspectiva a la vida urbana por 5 artistas emergentes.</p>
-                        <a href="#" class="enlace-tarjeta">Ver detalles</a>
-                    </div>
-                </article>
-
-                <article class="galeria-tarjeta">
-                    <img src="img/imagen3.jpg" alt="Escultura moderna de metal">
-                    <div class="tarjeta-info">
-                        <h3>Visitas Guiadas para Turistas</h3>
-                        <p>Recorridos en inglés y español todos los fines de semana. Reserva tu cupo.</p>
-                        <a href="#tickets" class="enlace-tarjeta">Reservar visita</a>
-                    </div>
-                </article>
-            </div>
-        </section>
-
-        <section class="seccion-layout seccion-oscura" id="artistas">
-            <div class="contenedor">
-                <h2>Artistas Destacados</h2>
-                <p class="seccion-descripcion">Conoce a los creadores que están redefiniendo el arte contemporáneo.</p>
-
-                <div class="lista-artistas">
-                    <div class="artista-item">
-                        <img src="img/artista1.jpg" alt="Foto del artista 1" class="artista-foto">
-                        <h3>Christian Bendayán</h3>
-                        <p>Pintor y curador. Su obra, llena de color vibrante, trae los mitos y la cultura de la
-                            Amazonía al centro del arte
-                            contemporáneo limeño.</p>
-                    </div>
-                    <div class="artista-item">
-                        <img src="img/artista2.jpg" alt="Foto del artista 2" class="artista-foto">
-                        <h3>Sandra Gamarra Heshiki</h3>
-                        <p>Artista conceptual que usa la pintura y la instalación. Su obra es muy inteligente: cuestiona
-                            el rol de los museos y la
-                            historia del arte.</p>
-                    </div>
-                    <div class="artista-item">
-                        <img src="img/artista3.jpg" alt="Foto del artista 3" class="artista-foto">
-                        <h3>Sergio Zevallos</h3>
-                        <p>Pionero de la performance y la fotografía en el Perú. Su trabajo explora la identidad, la
-                            política y el cuerpo de forma
-                            cruda y provocadora.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="seccion-layout contenedor" id="tickets">
-            <h2>Tickets y Horarios</h2>
-            <p class="seccion-descripcion">Planea tu visita. Abierto todos los días.</p>
-
-            <div class="tickets-grid">
-                <div class="ticket-tipo">
-                    <h3>Entrada General</h3>
-                    <p class="precio">S/ 20.00</p>
-                    <p>Acceso a todas las exposiciones permanentes y temporales.</p>
-                    <a href="#" class="btn-ticket">Comprar Ahora</a>
-                </div>
-                <div class="ticket-tipo">
-                    <h3>Estudiantes</h3>
-                    <p class="precio">S/ 10.00</p>
-                    <p>Presentando carnet universitario o de instituto.</p>
-                    <a href="#" class="btn-ticket">Comprar Ahora</a>
-                </div>
-                <div class="ticket-tipo">
-                    <h3>Turistas</h3>
-                    <p class="precio">S/ 35.00</p>
-                    <p>Incluye audioguía en Inglés, Portugués o Español.</p>
-                    <a href="#" class="btn-ticket">Comprar Ahora</a>
-                </div>
-            </div>
-        </section>
-
-        <section class="seccion-layout seccion-oscura" id="contacto">
-            <div class="contenedor">
-                <h2>Contacto y Registro</h2>
-                <p class="seccion-descripcion">Escríbenos.</p>
-
-                <form class="formulario-contacto">
-                    <div class="form-grupo">
-                        <label for="nombre">Nombre Completo</label>
-                        <input type="text" id="nombre" name="nombre">
-                    </div>
-
-                    <div class="form-grupo">
-                        <label for="email">Correo Electrónico</label>
-                        <input type="email" id="email" name="email">
-                    </div>
-
-                    <div class="form-grupo">
-                        <label for="mensaje">Mensaje</label>
-                        <textarea id="mensaje" name="mensaje" rows="5"></textarea>
-                    </div>
-                    <button type="submit" class="btn-ticket">Enviar Mensaje</button>
-                </form>
-            </div>
-        </section>
-
     </main>
 
     <footer class="footer-principal">
@@ -163,7 +40,6 @@
             <p>&copy; 2025 Todos los derechos reservados.</p>
         </div>
     </footer>
-
 </body>
 
 </html>
